# language-course-compiler

./: .env.example  .gitignore  CLAUDE.md  INITIAL_INSTRUCTIONS.md  README.md  pyproject.toml  themes.yaml
TASKS/: 0001-project-scaffold-and-llm-module.md  0002-importers-and-canonical-lexicon-model.md  0003-lesson-generation-and-vocabulary-validation.md  0004-grammar-examples-and-exercises.md  0005-validation-engine.md  0006-audio-and-tts-providers.md  0007-export-bundles-and-cli.md  0008-lesson-orchestrator.md  0009-verb-integration-in-orchestrator.md  0010-lesson-image-generation.md  0011-download-audio-files.md  0012-decouple-lesson-length-from-new-word-count.md  0013-theme-driven-word-selection-generate-then-filter.md  0014-minimal-edit-refinement-loop.md  0015-front-loaded-vocabulary-and-early-lesson-format.md  0016-verbs-in-lessons-full-coverage-and-level-scoped-output.md  0017-level-assignment-by-cumulative-frequency-budget.md  0018-compound-derivable-word-detection.md  0019-distinguish-noun-verb-homographs.md  0020-test-catalog-path-front-loading.md  0021-multi-level-export.md  0022-coherent-lessons-via-outline-and-seed-anchors.md  0023-pos-tagged-lesson-tokens.md
docs/: frontend-integration.md
grammar/: nl.yaml
grammar/nl/: A2.yaml
scripts/: generate_voxtral_client.py
src/course_compiler/: __init__.py  cli.py  compounds.py  frequency.py  leveling.py  models.py  settings.py
src/course_compiler/audio/: __init__.py  voxtral_client.py
src/course_compiler/converters/: __init__.py  dutch.py
src/course_compiler/generation/: __init__.py  annotate.py  base.py  cache.py  examples.py  exercises.py  grammar.py  grammar_writer.py  lesson.py  orchestrator.py  sense.py  themes.py  themes.yaml  validator.py
src/course_compiler/llm/: __init__.py  (+5 more)
tests/: conftest.py  test_annotate.py  test_base.py  test_cli_annotate.py  test_cli_export.py  test_cli_generate_grammar.py  test_cli_generate_lessons.py  test_cli_images_audio.py  test_cli_import.py  test_compounds.py  test_dutch_converter.py  test_example_generator.py  test_exercise_generator.py  test_factory.py  test_frequency.py  test_grammar_catalog.py  test_grammar_index.py  test_grammar_progression.py  test_grammar_writer.py  test_lemmatizer.py  test_lesson_generator.py  test_leveling.py  test_llm_cache.py  test_models.py  test_nt2lex.py  test_ollama.py  test_openai.py  test_orchestrator.py  test_sense.py  test_settings.py  test_theme_assigner.py  test_vocabulary_validator.py
(+45 files in other folders)
