[project]
name = "language-course-compiler"
version = "0.1.0"
description = "Language-agnostic course compiler that generates language-learning courses from lexical resources using LLMs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Erik Vullings", email = "erik.vullings@tno.nl" }]
keywords = ["language-learning", "compiler", "llm", "course", "pwa"]
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "msgpack>=1.2.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "spacy>=3.7",
    "click>=8.0",
]

[dependency-groups]
dev = ["pytest>=9.1.1", "pytest-asyncio>=0.23", "ruff>=0.6", "spacy>=3.7"]

[project.scripts]
course = "course_compiler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/course_compiler"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
